--- a/projects/alexprisacariu-dev/project.mdx
+++ b/projects/alexprisacariu-dev/project.mdx
@@ -2,7 +2,7 @@
 title: "alexprisacariu.dev"
 coverShortProjectImage: "/imgs/projects/006_alexprisacariu.dev/cover.jpg"
 coverProjectImage: "/imgs/projects/006_alexprisacariu.dev/image1.png"
-tags: 
+tags:
   - NextJS
   - GitHub
 description: "My personal website"
@@ -13,5 +13,7 @@ otherImages:
   - "/imgs/projects/006_alexprisacariu.dev/image2.png"
   - "/imgs/projects/006_alexprisacariu.dev/image3.png"
   - "/imgs/projects/006_alexprisacariu.dev/image4.png"
+urlPart: alexprisacariu-dev
+yearsActive: [2021, "present"]
 ---
 Developed using NextJS and hosted on GitHub.
