--- a/projects/laikado-es/project.mdx
+++ b/projects/laikado-es/project.mdx
@@ -2,7 +2,7 @@
 title: "laikado.es"
 coverShortProjectImage: "/imgs/projects/004_laikado.es/cover.jpg"
 coverProjectImage: "/imgs/projects/004_laikado.es/image1.jpeg"
-tags: 
+tags:
   - NodeJS
 description: "Real estate ad vehicles aggregator portal"
 pinned: 1
@@ -16,6 +16,8 @@ otherImages:
   - "/imgs/projects/004_laikado.es/image6.jpeg"
   - "/imgs/projects/004_laikado.es/image7.jpeg"
   - "/imgs/projects/004_laikado.es/image8.jpeg"
+urlPart: laikado-es
+yearsActive: [2022, 2024]
 ---
 An aggregator portal for real estate and vehicles ads created while working
 at Rubrikk. My part of the project was primaly concentrated on the front-end
