--- a/projects/panorocrm/project.mdx
+++ b/projects/panorocrm/project.mdx
@@ -2,7 +2,7 @@
 title: "PanoroCRM"
 coverShortProjectImage: "/imgs/projects/panorocrm/cover.jpg"
 coverProjectImage: "/imgs/projects/panorocrm/image1.jpeg"
-tags: 
+tags:
   - NodeJS
   - ReactJS
   - C++
@@ -20,6 +20,8 @@ otherImages:
   - "/imgs/projects/panorocrm/image10.jpeg"
   - "/imgs/projects/panorocrm/image8.jpeg"
   - "/imgs/projects/panorocrm/image9.jpeg"
+urlPart: panorocrm
+yearsActive: [2017, 2022]
 ---
 PanoroCRM is a complex modular CRM with multiple modules for managing real
 estate offers, publish them to different real estate portals, create custom
@@ -41,11 +43,9 @@ Some modules integrated:
 - history module provides users logs of their whole activity on the CRM;
 - agencies module provides the agencies administrators ability to add agents,
   limit their number of ads that can add and track their activty;
-- integration with 
+- integration with
   <a href="https://www.imobiliare.ro/" target="_blank" rel="noreferrer noopener">imobiliare.ro</a>,
   <a href="https://www.storia.ro/" target="_blank" rel="noreferrer noopener">storia.ro</a>/<a href="https://www.olx.ro/" target="_blank" rel="noreferrer noopener">olx.ro</a>
-  and <a href="https://alexprisacariu.dev/project/003_panoro.ro" target="_blank" rel="noreferrer noopener">panoro.ro</a> - 
+  and <a href="https://alexprisacariu.dev/project/003_panoro.ro" target="_blank" rel="noreferrer noopener">panoro.ro</a> -
   adding the ability to the users to add their ads directly from the CRM to
   those platforms.
-
-
