--- a/projects/and-wedding-invitations/project.mdx
+++ b/projects/and-wedding-invitations/project.mdx
@@ -2,7 +2,7 @@
 title: "and-wedding-invitations"
 coverShortProjectImage: "/imgs/projects/005_and-wedding-invitations/cover.jpg"
 coverProjectImage: "/imgs/projects/005_and-wedding-invitations/image1.jpeg"
-tags: 
+tags:
   - Go
   - SolidJS
 description: "Application for the guests to my wedding to confirm the participation and to select options"
@@ -17,6 +17,8 @@ linkedPosts:
   - "post010_creating_an_application_for_my_wedding_invitations_part1"
   - "post012_creating_an_application_for_my_wedding_invitations_part2"
 useCoverImage: 1
+urlPart: and-wedding-invitations
+yearsActive: [2024, 2024]
 ---
 A small website written in Go and SolidJS for my wedding where my invited
 guests could confirm if they would come or not and also inform us if they would
