--- a/projects/imocentral-ro/project.mdx
+++ b/projects/imocentral-ro/project.mdx
@@ -2,7 +2,7 @@
 title: "imocentral.ro"
 coverShortProjectImage: "/imgs/projects/imocentral.ro/cover.jpg"
 coverProjectImage: "/imgs/projects/imocentral.ro/image1.jpeg"
-tags: 
+tags:
   - NextJS
 description: "Real estate website optimized for speed and for Googlebot"
 pinned: 1
@@ -18,6 +18,8 @@ otherImages:
   - "/imgs/projects/imocentral.ro/image8.jpeg"
   - "/imgs/projects/imocentral.ro/image9.jpeg"
 useCoverImage: 1
+urlPart: imocentral-ro
+yearsActive: [2017, 2022]
 ---
 <a href="https://imocentral.ro" target="_blank" rel="noreferrer noopener">imocentral.ro</a>
 is a website created for a real estate agency for displaying their offers and
@@ -39,9 +41,8 @@ time, but also be able to update the data when is changed.
 Also I implemented for the website a PWA, and also published it on Google Play.
 <br/>
 The data of the website is gathered from <a href="/project/002_panorocrm">PanoroCRM</a>. Every request that must be
-called from client is proxied through another request created by NextJs in 
+called from client is proxied through another request created by NextJs in
 order to not expose sensitive data.
 <br/>
-The website design and backend was changed in 2023 where I was not that much 
+The website design and backend was changed in 2023 where I was not that much
 involved. One day I will upload a demo of it up.
-
