--- a/projects/panoro-ro/project.mdx
+++ b/projects/panoro-ro/project.mdx
@@ -2,7 +2,7 @@
 title: "panoro.ro"
 coverShortProjectImage: "/imgs/projects/panoro.ro/cover.jpg"
 coverProjectImage: "/imgs/projects/panoro.ro/image1.jpeg"
-tags: 
+tags:
   - NodeJS
   - ReactJS
 description: "Real estate website optimized for speed and Googlebot"
@@ -16,6 +16,8 @@ otherImages:
   - "/imgs/projects/panoro.ro/image5.jpeg"
   - "/imgs/projects/panoro.ro/image6.jpeg"
   - "/imgs/projects/panoro.ro/image7.jpeg"
+urlPart: panoro-ro
+yearsActive: [2020, 2022]
 ---
 A real estate aggregator portal that was the first one to have 360 tours of
 real estates in Romania. The portal featured a dashboard where users and
@@ -30,5 +32,3 @@ that can export a standalone link with only the tour.
 - featured a complete 360 tours editor created using
   <a href="https://github.com/google/marzipano" target="_blank" rel="noreferrer noopener">Google's Marzipano</a>;
 - dashboard where users could add ads to portal;
-
-
