Work in progress for v2

--- a/projects/panorovr/project.mdx
+++ b/projects/panorovr/project.mdx
@@ -1,23 +1,20 @@
 ---
-title: "panoro.ro"
+title: "PanoroVR"
 coverShortProjectImage: "/imgs/projects/panoro.ro/cover.jpg"
 coverProjectImage: "/imgs/projects/panoro.ro/image1.jpeg"
 tags:
   - NodeJS
   - ReactJS
 description: "Real estate website optimized for speed and Googlebot"
-pinned: 1
 url: "https://panoro.ro"
 otherImages:
-  - src: "/imgs/projects/panoro.ro/image1.jpeg"
-    alt: "abc abc abc"
+  - "/imgs/projects/panoro.ro/image1.jpeg"
   - "/imgs/projects/panoro.ro/image3.jpeg"
   - "/imgs/projects/panoro.ro/image4.jpeg"
   - "/imgs/projects/panoro.ro/image2.jpeg"
   - "/imgs/projects/panoro.ro/image5.jpeg"
   - "/imgs/projects/panoro.ro/image6.jpeg"
   - "/imgs/projects/panoro.ro/image7.jpeg"
-urlPart: panoro-ro
 yearsActive: [2020, 2022]
 ---
 A real estate aggregator portal that was the first one to have 360 tours of
