--- a/posts/post013_creating_a_simple_popup_chatbot_using_openai/post.mdx
+++ b/posts/post013_creating_a_simple_popup_chatbot_using_openai/post.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Creating a simple popup chatbot using OpenAI"
-tags: 
+tags:
    - JavaScript/JS
    - OpenAI
    - ChatGPT
@@ -9,6 +9,7 @@ tags:
    - TTS
    - STT
    - Tutorial
+coverSmall: "/imgs/posts/post013/cover-small.png"
 invisibleTags:
    - LongPost
 publishedOn: "2024-05-21T12:25:43.054Z"
@@ -34,7 +35,7 @@ All the code is available
 
 ## The basics
 
-In this chapter we will go to the basics of the application: the project 
+In this chapter we will go to the basics of the application: the project
 structure and packages we used.
 
 The project will be using the following packages:
@@ -104,7 +105,7 @@ Let's look what happens when the user presses enter on the text input element:
 inputTextElement.addEventListener('keydown', async (event) => {
     if (event.code !== 'Enter') return;
     if (!inputTextElement.value) return;
-    
+
     const message = inputTextElement.value;
 
     inputTextElement.value = "";
@@ -131,7 +132,7 @@ the magic. Let's look at it:
 /**
  * Add a new message to the chat.
  * @async
- * 
+ *
  * @param {MessageType} type the type of message
  * @param {String|Audio} message the data of the message
  * @param {Object} [settings] additional settings
@@ -159,7 +160,7 @@ async function addMessage(type, message, settings = {}) {
     if (type === MessageType.User || type === MessageType.Bot) {
         messageHistory.push({ role: type === MessageType.User ? 'user' : 'assistant', content: message });
     }
-        
+
     if (type === MessageType.Bot) {
         if (Settings.UseWriteEffect) {
             // Create a write effect when the bot responds
@@ -169,7 +170,7 @@ async function addMessage(type, message, settings = {}) {
                 const ms = settings.audioLength * 1000 + ((message.match(/,/g) || []).length * 40) + ((message.match(/\./g) || []).length * 70);
                 speed = ms / message.length;
             }
-            
+
             for (let i=0, length=message.length; i < length; i += 1) {
                 newMsg.innerHTML += message.charAt(i);
                 await sleep(speed);
@@ -182,14 +183,14 @@ async function addMessage(type, message, settings = {}) {
         if (type === MessageType.User) {
             response = await sendMessage({ message });
         } else if (type === MessageType.UserAudio) {
-            response = await sendMessage({ audio: message });        
+            response = await sendMessage({ audio: message });
         }
 
         if (response.audio) {
             const audio = convertBase64ToAudio(response.audio);
             playAudio(audio);
         }
-        
+
         return addMessage(MessageType.Bot, response.answer);
     }
 }
@@ -200,7 +201,7 @@ CSS class based on the type of the message.
 
 Once that is done we store the message in our client-side chat history.
 
-Next, if the message to be added is from the bot, we display it using a 
+Next, if the message to be added is from the bot, we display it using a
 "writing effect". We try to synchronize the audio, if it exists, to the typing
 speed by dividing the length of the audio to the number of characters in the
 message.
@@ -215,7 +216,7 @@ One thing to mention: we generate a random ID for each client that we send with
 each message so the server knows from where to get the chat history.
 
 > The alternative to sending an identifying ID to the server would be to send
-> the whole history each time, but with each message the data that needs to be 
+> the whole history each time, but with each message the data that needs to be
 > sent increase.
 
 ```js[class="line-numbers"]
@@ -223,7 +224,7 @@ each message so the server knows from where to get the chat history.
 /**
  * Create a random ID of given length.
  * Taken from https://stackoverflow.com/a/1349426
- * 
+ *
  * @param {Number} length the length of the generated ID
  * @returns {String} the generated ID
  */
@@ -246,7 +247,7 @@ const ChatID = makeID(10);
 /**
  * Send a message to the server and return the JSON back.
  * @async
- * 
+ *
  * @param {Object} data the data to send
  * @returns {Promise<Object>} the result from the server
  */
@@ -260,7 +261,7 @@ async function sendMessage(data = {}) {
             body: JSON.stringify({ id: ChatID, ...data }),
         });
 
-        return response.json();        
+        return response.json();
     } catch (error) {
         console.error("Error:", error);
     }
@@ -305,7 +306,7 @@ stop the "listening" state of the microphone.
 
 > Encoding the audio to `base64` is not a very efficient method of sending the
 > audio to the server, but is a very easy method.
-> We will look on another method to send the audio to the server in 
+> We will look on another method to send the audio to the server in
 > **[The better implementation](#the-better-implementation)** section.
 
 ```js[class="line-numbers"]
@@ -313,7 +314,7 @@ stop the "listening" state of the microphone.
 /**
  * Record the user and return it as an base64 encoded audio.
  * @async
- * 
+ *
  * @param {HTMLElement} stopRecordButtonElement the stop button element
  * @returns {Promise<String>} the base64 encoded audio
  */
@@ -384,7 +385,7 @@ app.post('/api/message', async (req, res) => {
     }
 
     const messages = getChatMessages(chatHistory, req.body.id);
-    
+
     if (req.body.message) {
         messages.push({ role: "user", content: req.body.message });
     } else {
@@ -436,7 +437,7 @@ for the given ID (or create a new chat history):
 /* version-1/server.js */
 /**
  * Get the chat history, or create a new one or the given ID.
- * 
+ *
  * @param {Object} chatHistory the global chat history object containing all the chats
  * @param {String} id the ID of the chat to retrieve
  * @returns {Object} the chat history for the given `id`
@@ -468,7 +469,7 @@ transcription of the given audio.
 /**
  * Convert speech to text using OpenAI.
  * @async
- * 
+ *
  * @param {OpenAI} openai the OpenAI instance
  * @param {String} audio the base64 encoded audio
  * @returns {Promise<String>} the text
@@ -486,15 +487,15 @@ async function stt(openai, audio) {
 ```
 
 Now that we have the message, we send the chat to ChatGPT and wait for a
-response by calling the `getAnswer` function. 
+response by calling the `getAnswer` function.
 
 ```js[class="line-numbers"]
 /* version-1/server.js */
 /**
- * 
- * @param {*} openai 
- * @param {*} messages 
- * @returns 
+ *
+ * @param {*} openai
+ * @param {*} messages
+ * @returns
  */
 async function getAnswer(openai, messages) {
     // Documentation https://platform.openai.com/docs/api-reference/chat/create
@@ -507,7 +508,7 @@ async function getAnswer(openai, messages) {
 }
 ```
 
-Last part is about converting the response from the AI to an audio using the 
+Last part is about converting the response from the AI to an audio using the
 function `tts` that uses the method `openai.audio.speech.create` to create
 an audio file. The OpenAI's TTS support multiple formats but we've choosen `mp3`
 for this tutorial.
@@ -520,10 +521,10 @@ base64 encoded audio string to send back to the client.
 /**
  * Convert text to speech.
  * @async
- * 
- * @param {*} openai 
- * @param {*} input 
- * @returns 
+ *
+ * @param {*} openai
+ * @param {*} input
+ * @returns
  */
 async function tts(openai, input) {
     // Documentation https://platform.openai.com/docs/api-reference/audio/createSpeech
@@ -580,7 +581,7 @@ server to know how to handle the payload represented by the following bytes in
 the data sent.
 
 > Note that we configured the WebSocket server to accept and send only
-> binary data. This is why we will always send a `Uint8Array` from the client 
+> binary data. This is why we will always send a `Uint8Array` from the client
 > side and a `Buffer` from the server side.
 > We are sending only in binary because it is more efficient, converting to text
 > only what we need and remaining to stay in binary (like the audio chunks, what
@@ -645,7 +646,7 @@ the following:
  * a new message. The function must return a boolean: if `true` is returned then
  * is considered that the message was handled and will stop the exection of the
  * rest of the subscribers in the list.
- * 
+ *
  * @param {Function} fn the function to be added
  */
 ws.subscribeToWSMessage = (fn) => {
@@ -654,7 +655,7 @@ ws.subscribeToWSMessage = (fn) => {
 
 /**
  * Remove an added function from the list of subscribers.
- * 
+ *
  * @param {Function} fn the function to be removed
  */
 ws.unsubscribeToWSMessage = (fn) => {
@@ -673,7 +674,7 @@ Next, we extend again the `ws` object with 3 more methods:
 /**
  * Send a text message to the server.
  * @async
- * 
+ *
  * @param {String} message the message to send
  * @param {Function} onNewMessageContent the function to be called with the new answer from bot as it sent from the server
  */
@@ -697,7 +698,7 @@ subscription to listen for new messages to handle the response from the bot.
 /* version-2/client.js */
 /**
  * Create and add a subscription to listen for the response of the bot to our sent message
- * 
+ *
  * @param {Function} onNewMessageContent the function to be called with the new answer from bot as it sent from the server
  */
 ws.createSubscriptionForBotResponse = (onNewMessageContent) => {
@@ -732,7 +733,7 @@ point we will unsubscribe from listening to new messages.
 /**
  * Send an audio chunk to the server.
  * @async
- * 
+ *
  * @param {Blob} blobChunk the audio blob chunk
  */
 ws.sendAudioChunk = async (blobChunk) => {
@@ -742,7 +743,7 @@ ws.sendAudioChunk = async (blobChunk) => {
 
 /**
  * Tell the server that the audio is done.
- * 
+ *
  * @param {Function} onNewMessageContent the function to be called with the new answer from bot as it sent from the server
  */
 ws.sendAudioEnd = (onNewMessageContent) => {
@@ -770,7 +771,7 @@ We slightly modified the `addMessage` function by splitting it into
 /**
  * Add a new message to the chat.
  * @async
- * 
+ *
  * @param {WebSocket} ws the WebSocket
  * @param {MessageType} type the type of message
  * @param {String|Audio} message the data of the message
@@ -783,7 +784,7 @@ async function addUserMessage(ws, type, message) {
     if (type === MessageType.User) {
         messageHistory.push({ role: type === MessageType.User ? 'user' : 'assistant', content: message });
     }
-        
+
     if (type === MessageType.User) {
         await ws.sendTextMessage(message, addBotMessageInChunks());
     } else {
@@ -794,7 +795,7 @@ async function addUserMessage(ws, type, message) {
 /**
  * Add bot message in chunks. The functions returns another function that when called with
  * the argument will add that argument to the bot message.
- * 
+ *
  * @returns {Function} the function accept a parameter `content`; when called the `content` is added to the message
  */
 function addBotMessageInChunks() {
@@ -846,7 +847,7 @@ then increase the counter.
 /**
  * Record the user and send the chunks to the server and on end wait for all the chunks to be sent.
  * @async
- * 
+ *
  * @param {WebSocket} ws the WebSocket
  * @param {HTMLElement} stopRecordButtonElement the stop button element
  * @returns {Promise}
@@ -921,7 +922,7 @@ webSocketServer.on('connection', function connection(clientWS) {
     clientWS.audioChunks = [];
 
     clientWS.on('error', console.error);
-    
+
     clientWS.on('message', async (data, isBinary) => {
         // ...
     });
@@ -988,7 +989,7 @@ the client socket.
         messageContent = payload.toString('utf8');
     } else if (messageType === ClientMessageID.UserAudioEnd) {
         // When the client send the `ClientMessageID.UserAudioEnd` message type it means it clicked the STOP button
-        
+
         // Concat all the buffers into a single one
         const buffer = Buffer.concat(clientWS.audioChunks);
 
@@ -1016,7 +1017,7 @@ the client socket.
 Once the client send a message of type `ClientMessageID.UserTextMessage` or
 `ClientMessageID.UserAudioEnd`, we retrieve, as before, the chat's messages. If
 the message is of type `ClientMessageID.UserTextMessage`, we will convert the
-received data (`payload`) to a `String`. If the message is of type 
+received data (`payload`) to a `String`. If the message is of type
 `ClientMessageID.UserAudioEnd`, we will combine all the audio buffer chunks into
 a single chunk, reset the array of chunks and perform the speech-to-text action
 on the audio, which will return the text.
@@ -1044,7 +1045,7 @@ streams:
 /**
  * Get the next message in the conversation
  * @async
- * 
+ *
  * @param {OpenAI} openai the OpenAI instance
  * @param {String[]} messages the messages in the OpenAI format
  * @returns {String} the response from ChatGPT
@@ -1089,7 +1090,7 @@ On the client side, more changes are needed:
 
 - We cannot, no more, always transform the received data to text because now
   we can receive audio data;
-- Because we might receive the next audio data before the previous audio is done 
+- Because we might receive the next audio data before the previous audio is done
   playing, we need to introduce a synchronization method to keep track of which
   audio needs to be played next.
 
