--- a/projects/airportlabs-communityapp/project.mdx
+++ b/projects/airportlabs-communityapp/project.mdx
@@ -1,5 +1,5 @@
 ---
-title: "alexprisacariu.dev"
+title: "CommunityApp"
 coverShortProjectImage: "/imgs/projects/006_alexprisacariu.dev/cover.jpg"
 coverProjectImage: "/imgs/projects/006_alexprisacariu.dev/image1.png"
 tags:
@@ -13,11 +13,5 @@ otherImages:
   - "/imgs/projects/006_alexprisacariu.dev/image2.png"
   - "/imgs/projects/006_alexprisacariu.dev/image3.png"
   - "/imgs/projects/006_alexprisacariu.dev/image4.png"
-yearsActive: [2021, "present"]
-techStack:
-  - NextJS
-  - TailwindCSS
-  - GitHub
-myInvolvement: "Created all by myself"
+yearsActive: [2022, "present"]
 ---
-Developed using NextJS and hosted on GitHub.
