--- a/projects/imocentral-ro/project.mdx
+++ b/projects/imocentral-ro/project.mdx
@@ -8,7 +8,8 @@ description: "Real estate website optimized for speed and for Googlebot"
 pinned: 1
 url: "https://imocentral.ro"
 otherImages:
-  - "/imgs/projects/imocentral.ro/image1.jpeg"
+  - src: "/imgs/projects/imocentral.ro/image1.jpeg"
+    alt: "bla bla bla bal"
   - "/imgs/projects/imocentral.ro/image3.jpeg"
   - "/imgs/projects/imocentral.ro/image4.jpeg"
   - "/imgs/projects/imocentral.ro/image2.jpeg"
@@ -29,7 +30,7 @@ offer informations about the company.
 - optimized for Googlebot;
 - PWA;
 - using SSR (Server-side rendering) and ISR (Incremental Static Regeneration);
-- getting the data from <a href="/project/002_panorocrm">PanoroCRM</a>.
+- getting the data from <a href="/project/panorocrm">PanoroCRM</a>.
 
 My job was to implement the design into a functional website that would be very
 friendly with the Googlebot for crawling it and having max scores on
@@ -40,7 +41,7 @@ time, but also be able to update the data when is changed.
 <br/>
 Also I implemented for the website a PWA, and also published it on Google Play.
 <br/>
-The data of the website is gathered from <a href="/project/002_panorocrm">PanoroCRM</a>. Every request that must be
+The data of the website is gathered from <a href="/project/panorocrm">PanoroCRM</a>. Every request that must be
 called from client is proxied through another request created by NextJs in
 order to not expose sensitive data.
 <br/>
