Work in progress for v2

--- a/posts/post011_always_use_promise_all/post.mdx
+++ b/posts/post011_always_use_promise_all/post.mdx
@@ -21,7 +21,7 @@ code was not handling a promise inside a try/catch block. But how?
 
 Let see the next code:
 
-```javascript[class="line-numbers"]
+```javascript showLineNumbers
 const streams = {
     firstStepStream: (req, res) => {
         res.streams = [];
