--- a/posts/post012_creating_an_application_for_my_wedding_invitations_part2/post.mdx
+++ b/posts/post012_creating_an_application_for_my_wedding_invitations_part2/post.mdx
@@ -27,7 +27,7 @@ to invite him:
 a link of the following form: `website-link.com/invite/[INVITE_CODE]`. When
 accessed, he will see the next screen:
 
-<ImageOnClickFullscreen src="/imgs/projects/005_and-wedding-invitations/image1.jpeg" className="post-image center medium cursor-pointer"/>
+<ClickableImage src="/imgs/projects/005_and-wedding-invitations/image1.jpeg" className="post-image center medium cursor-pointer"/>
 
 This is a replica of the physical invitation, offering all the information to
 the invited person and, at the bottom of the invitation, a button to go to the
@@ -37,7 +37,7 @@ confirmation screen.
 `INVITE_CODE` written on the invitation and the QR code to access the website.
 When the invited person accesses the website, he will see the following screen:
 
-<ImageOnClickFullscreen src="/imgs/projects/005_and-wedding-invitations/image2.jpeg" className="post-image center medium cursor-pointer" loading="lazy"/>
+<ClickableImage src="/imgs/projects/005_and-wedding-invitations/image2.jpeg" className="post-image center medium cursor-pointer" loading="lazy"/>
 
 Introducing the correct code will redirect the invited person to the
 confirmation screen.
@@ -48,14 +48,14 @@ The confirmation screen that can be seen in the below screenshot is where the
 user can confirm that they will come to the wedding or tell us that they will
 not be able to attend it.
 
-<ImageOnClickFullscreen src="/imgs/projects/005_and-wedding-invitations/image5.jpeg" className="post-image center medium cursor-pointer" loading="lazy"/>
+<ClickableImage src="/imgs/projects/005_and-wedding-invitations/image5.jpeg" className="post-image center medium cursor-pointer" loading="lazy"/>
 
 If the user clicks on the button to confirm that they will **not** attend the
 wedding, he will be redirected to the refused screen, where we say that we are
 sad that he will not be able to attend the wedding, but I'm also giving him
 the chance to change his option and confirm that he will attend the wedding.
 
-<ImageOnClickFullscreen src="/imgs/projects/005_and-wedding-invitations/image6.jpeg" className="post-image center medium cursor-pointer" loading="lazy"/>
+<ClickableImage src="/imgs/projects/005_and-wedding-invitations/image6.jpeg" className="post-image center medium cursor-pointer" loading="lazy"/>
 
 If the user clicks on the button that confirms that they will come to the
 wedding, I show the options screen where the guest can choose some extra
@@ -66,7 +66,7 @@ options:
 - if he comes with kids and requires kids' menus (and how many);
 - if he needs a hotel overnight.
 
-<ImageOnClickFullscreen src="/imgs/projects/005_and-wedding-invitations/image3.jpeg" className="post-image center medium cursor-pointer" loading="lazy"/>
+<ClickableImage src="/imgs/projects/005_and-wedding-invitations/image3.jpeg" className="post-image center medium cursor-pointer" loading="lazy"/>
 
 This is pretty much what an invited person can see and choose on the website.
 But how can I add invite codes and set their settings?
@@ -74,7 +74,7 @@ But how can I add invite codes and set their settings?
 For this, I created a simple dashboard where I can add and edit guest settings
 using the unique invite code.
 
-<ImageOnClickFullscreen src="/imgs/projects/005_and-wedding-invitations/image4.jpeg" className="post-image center medium cursor-pointer" loading="lazy"/>
+<ClickableImage src="/imgs/projects/005_and-wedding-invitations/image4.jpeg" className="post-image center medium cursor-pointer" loading="lazy"/>
 
 Where's the data stored? The tag `Google Spreadsheet` that I attached to this
 post may give that away. Yes, I'm storing the responses and options chosen by
