Work in progress for v2

--- a/posts/_post901_creating_my_own_logs_collector/post.mdx
+++ b/posts/_post901_creating_my_own_logs_collector/post.mdx
@@ -3,6 +3,15 @@ title: "Creating my own logs collector"
 tags: 
    - NodeJS
 publishedOn: "2021-08-28T12:36:45.620Z"
+seoTitle: "Building a Custom Logs Collector: Architecture and Design"
+seoDescription: "Learn why and how I built a custom logs collector system with NodeJS, featuring a processing app, catcher app, and client for efficient log management."
+seoKeywords:
+   - logs collector
+   - custom logging system
+   - NodeJS logging
+   - log processing
+   - log management
+   - software architecture
 skip: 1
 ---
 In this post I will describe why I created my own logs collector instead of
