--- a/posts/post001_old_custom_mouse_cursor/post.mdx
+++ b/posts/post001_old_custom_mouse_cursor/post.mdx
@@ -6,6 +6,15 @@ tags:
    - C++
    - Tutorial
 publishedOn: "2014-04-10T12:36:45.620Z"
+seoTitle: "SFML Tutorial: How to Create a Custom Mouse Cursor in C++"
+seoDescription: "A step-by-step tutorial on implementing a custom mouse cursor in SFML using C++. Learn to hide the default cursor and render a sprite at the mouse position."
+seoKeywords:
+   - SFML
+   - C++
+   - custom mouse cursor
+   - game development
+   - SFML tutorial
+   - game programming
 ---
 Have you ever wanted to have your own mouse cursor for you game or your application? Well… now you can!
 
