--- a/posts/post002_old_create_a_simple_piano/post.mdx
+++ b/posts/post002_old_create_a_simple_piano/post.mdx
@@ -6,6 +6,16 @@ tags:
    - C++
    - Tutorial
 publishedOn: "2014-04-11T12:36:45.620Z"
+seoTitle: "C++ and SFML Tutorial: Building a Simple Piano Application"
+seoDescription: "Learn how to create a simple piano application using C++ and SFML. This tutorial covers sound handling, keyboard input, and visual feedback for a virtual piano."
+seoKeywords:
+   - SFML
+   - C++
+   - piano application
+   - audio programming
+   - game development
+   - SFML tutorial
+   - sound synthesis
 ---
 In this tutorial we will create a simple piano like this one:
 
