--- a/posts/post003_old_how_to_apply_collision/post.mdx
+++ b/posts/post003_old_how_to_apply_collision/post.mdx
@@ -6,6 +6,16 @@ tags:
    - C++
    - Tutorial
 publishedOn: "2014-04-15T12:36:45.620Z"
+seoTitle: "AABB Collision Detection and Resolution in SFML with C++"
+seoDescription: "Master AABB collision detection and resolution in SFML. This tutorial explains how to handle collisions between dynamic and static objects in 2D games using C++."
+seoKeywords:
+   - SFML
+   - C++
+   - collision detection
+   - AABB collision
+   - game physics
+   - game development
+   - 2D platformer
 ---
 One of my biggest problems when creating games was not collision detection, it was how to apply collision. In this tutorial I will show you how to detect and apply collision on AABB objects.
 
