--- a/posts/post004_old_jumping_in_2d_platform_games/post.mdx
+++ b/posts/post004_old_jumping_in_2d_platform_games/post.mdx
@@ -6,6 +6,16 @@ tags:
     - C++
     - Tutorial
 publishedOn: '2014-04-22T12:36:45.620Z'
+seoTitle: "Implementing Jumping Mechanics in 2D Platformers with SFML and C++"
+seoDescription: "Learn how to implement smooth jumping mechanics in a 2D platform game using C++ and SFML. Covers gravity, ground detection, and jump physics."
+seoKeywords:
+   - SFML
+   - C++
+   - jumping mechanics
+   - 2D platformer
+   - game physics
+   - game development
+   - platformer tutorial
 ---
 Based on the last tutorial, <a href="/posts/post003_old_how_to_apply_collision">How to apply collision?</a>, in this post I will you show how to make an entity jump in a platform game.
 
