--- a/posts/post005_old_how_to_flip_sprites/post.mdx
+++ b/posts/post005_old_how_to_flip_sprites/post.mdx
@@ -6,6 +6,15 @@ tags:
    - C++
    - Tutorial
 publishedOn: "2014-04-30T12:36:45.620Z"
+seoTitle: "SFML Tutorial: How to Flip Sprites Horizontally and Vertically"
+seoDescription: "Learn how to flip sprites in SFML using C++. This tutorial covers two methods: modifying sprite scale and inverting texture rects for animation."
+seoKeywords:
+   - SFML
+   - C++
+   - flip sprites
+   - game development
+   - sprite animation
+   - SFML tutorial
 ---
 When you create games, and not only, you will sometimes need to flip sprites( e.g. in a game where for the enemy right walking animation you use 8 sprites, you don’t need to use a image manipulator program to create the left walking animation). For this you have 2 possibilities:
 
