--- a/posts/post006_old_how_to_create_a_simple_button/post.mdx
+++ b/posts/post006_old_how_to_create_a_simple_button/post.mdx
@@ -6,6 +6,16 @@ tags:
     - C++
     - Tutorial
 publishedOn: '2014-05-21T12:36:45.620Z'
+seoTitle: "Creating a Simple Button Class in SFML and C++"
+seoDescription: "A comprehensive guide to creating a reusable button class in SFML. Learn to handle mouse events, hover effects, and click actions in C++."
+seoKeywords:
+   - SFML
+   - C++
+   - GUI button
+   - game development
+   - UI design
+   - SFML tutorial
+   - event handling
 ---
 
 In this tutorial I will show you how to create a simple button. For the button design we will use a `sf::RectangleShape`.
