--- a/posts/post007_old_how_to_create_a_screenshot_system/post.mdx
+++ b/posts/post007_old_how_to_create_a_screenshot_system/post.mdx
@@ -6,6 +6,15 @@ tags:
    - C++
    - Tutorial
 publishedOn: "2014-06-11T12:36:45.620Z"
+seoTitle: "Building a Screenshot System in SFML with C++"
+seoDescription: "Implement a screenshot system in your SFML game. This tutorial shows how to capture the window, save images with timestamps, and handle key presses."
+seoKeywords:
+   - SFML
+   - C++
+   - screenshot system
+   - game development
+   - SFML tutorial
+   - image capture
 ---
 Have you ever wanted to be able to take screenshots of your game? In this tutorial I will show you how to create a screenshot system in which, when the player press `PrintScreen` key the game will create the screenshot and save it to a folder. The only problem is that SFML does not support the `PrintScreen` key, so we can’t check if the `PrintScreen` key is pressed and instead of this we will use another key, the `F5` key.
 
