--- a/posts/post008_dev_ideas_1_handle_data_between_tabs_components/post.mdx
+++ b/posts/post008_dev_ideas_1_handle_data_between_tabs_components/post.mdx
@@ -4,6 +4,15 @@ tags:
    - ReactJS
    - DevIdeas
 publishedOn: "2021-08-28T12:36:45.620Z"
+seoTitle: "React Dev Ideas: Handling Data Between Tab Components"
+seoDescription: "Explore efficient ways to share data between tab components in React. A comparison of lifting state up vs. using a parent class variable for data persistence."
+seoKeywords:
+   - ReactJS
+   - component communication
+   - state management
+   - tab components
+   - React tutorial
+   - frontend development
 ---
 Developing a CRM I ran into the next problem: what is the best way (at least
 for me) to handle the data between multiple components that can be accessed in
