--- a/posts/post009_creating_a_radio_station_on_a_raspberry_pi_using_darkice_and_icecast2/post.mdx
+++ b/posts/post009_creating_a_radio_station_on_a_raspberry_pi_using_darkice_and_icecast2/post.mdx
@@ -6,6 +6,17 @@ tags:
    - Ubuntu
    - Audio
 publishedOn: "2022-03-12T16:36:45.620Z"
+seoTitle: "DIY Radio Station with Raspberry Pi, DarkIce, and IceCast2"
+seoDescription: "Create your own radio station using a Raspberry Pi 3. Step-by-step guide to configuring DarkIce and IceCast2 for live audio streaming on Ubuntu."
+seoKeywords:
+   - Raspberry Pi
+   - DarkIce
+   - IceCast2
+   - radio station
+   - audio streaming
+   - Linux
+   - Ubuntu
+   - DIY project
 ---
 At my church we offer translations to people who cannot speak romanian, but the
 system we are using is pretty low quality and is a lot of static noise and is 
