--- a/posts/post010_creating_an_application_for_my_wedding_invitations_part1/post.mdx
+++ b/posts/post010_creating_an_application_for_my_wedding_invitations_part1/post.mdx
@@ -5,6 +5,16 @@ tags:
    - SolidJS
    - Google Spreadsheet
 publishedOn: "2023-09-02T13:11:43.054Z"
+seoTitle: "Building a Wedding Invitation App Part 1: Setup and Tech Stack"
+seoDescription: "Part 1 of creating a custom wedding invitation application. Discussing the choice of Go for backend, SolidJS for frontend, and Google Sheets for storage."
+seoKeywords:
+   - Go
+   - SolidJS
+   - Google Sheets
+   - web application
+   - wedding invitation app
+   - backend development
+   - frontend development
 ---
 So.. I'm marrying and I decided that, because I'm a developer, I want to make a
 web application for accepting (or rejecting) going to my wedding and also
