--- a/posts/post011_always_use_promise_all/post.mdx
+++ b/posts/post011_always_use_promise_all/post.mdx
@@ -3,6 +3,17 @@ title: "Always use Promise.all() (or any other Promise's method) for array of pr
 tags: 
    - JavaScript/JS
 publishedOn: "2023-09-16T16:01:00.000Z"
+seoTitle: "Why You Should Always Use Promise.all() for Array of Promises"
+seoDescription: "Understand why using Promise.all(), Promise.allSettled(), or Promise.any() is crucial for handling arrays of promises in JavaScript to prevent crashes and improve performance."
+seoKeywords:
+   - JavaScript
+   - Promise.all
+   - asynchronous programming
+   - error handling
+   - nodejs
+   - best practices
+coverSmall: "/imgs/posts/post011/cover-small.png"
+coverLarge: "/imgs/posts/post011/cover-large.png"
 ---
 At my job one of our services was crashing from time to time, but quite rarely.
 Because it crashed only at a large interval of a few days it was not given that
