--- a/posts/post012_creating_an_application_for_my_wedding_invitations_part2/post.mdx
+++ b/posts/post012_creating_an_application_for_my_wedding_invitations_part2/post.mdx
@@ -8,6 +8,18 @@ tags:
    - TypeScript
    - DevOps
 publishedOn: "2023-12-02T13:11:43.054Z"
+seoTitle: "Building a Wedding Invitation App Part 2: Launch and Architecture"
+seoDescription: "Part 2 of the wedding invitation app series. A deep dive into the Go backend architecture, Google Sheets integration, SolidJS frontend, and deployment on a VPS."
+seoKeywords:
+   - Go
+   - SolidJS
+   - Google Sheets API
+   - web application architecture
+   - deployment
+   - VPS hosting
+   - DevOps
+coverSmall: "/imgs/posts/post012/cover-small.png"
+coverLarge: "/imgs/posts/post012/cover-large.png"
 ---
 And it's done and up-and-running. I finally launched my wedding invitations
 website where my guests will be able to confirm if they are coming or not, but
