--- a/posts/post013_creating_a_simple_popup_chatbot_using_openai/post.mdx
+++ b/posts/post013_creating_a_simple_popup_chatbot_using_openai/post.mdx
@@ -10,9 +10,20 @@ tags:
    - STT
    - Tutorial
 coverSmall: "/imgs/posts/post013/cover-small.png"
+coverLarge: "/imgs/posts/post013/cover-small.png"
 invisibleTags:
    - LongPost
 publishedOn: "2024-05-21T12:25:43.054Z"
+seoTitle: "Tutorial: Building a Voice-Enabled AI Chatbot with OpenAI and WebSockets"
+seoDescription: "Learn how to build a popup AI chatbot using OpenAI's ChatGPT, Whisper (STT), and TTS. Covers both a simple HTTP implementation and a real-time WebSocket version."
+seoKeywords:
+   - OpenAI
+   - ChatGPT
+   - WebSockets
+   - chatbot tutorial
+   - speech-to-text
+   - text-to-speech
+   - JavaScript
 ---
 In this tutorial, I will present how to create a simple popup AI chat that can
 be added to any website. The client will be able to reply to the chat by typing
