Work in progress for v2

--- a/projects/airportlabs-communityapp/project.mdx
+++ b/projects/airportlabs-communityapp/project.mdx
@@ -1,17 +1,57 @@
 ---
 title: "CommunityApp"
-coverShortProjectImage: "/imgs/projects/006_alexprisacariu.dev/cover.jpg"
-coverProjectImage: "/imgs/projects/006_alexprisacariu.dev/image1.png"
+coverShortProjectImage:
+  png: "/imgs/projects/airportlabs-communityapp/thumbnail.png"
+  webp: "/imgs/projects/airportlabs-communityapp/thumbnail.webp"
+coverProjectImage:
+  png: "/imgs/projects/airportlabs-communityapp/cover.png"
+  webp: "/imgs/projects/airportlabs-communityapp/cover.webp"
 tags:
-  - NextJS
-  - GitHub
-description: "My personal website"
+  - PHP
+  - Laravel
+  - React
+  - Meteor
+description: "The mobile hub for all airport teams to stay connected, resolve issues, and keep operations running smoothly 24/7."
 pinned: 1
-url: "https://alexprisacariu.dev"
+url: "https://airportlabs.com/product-tours/airport-community-app"
 otherImages:
-  - "/imgs/projects/006_alexprisacariu.dev/image1.png"
-  - "/imgs/projects/006_alexprisacariu.dev/image2.png"
-  - "/imgs/projects/006_alexprisacariu.dev/image3.png"
-  - "/imgs/projects/006_alexprisacariu.dev/image4.png"
+  - png: "/imgs/projects/airportlabs-communityapp/image1.png"
+    webp: "/imgs/projects/airportlabs-communityapp/image1.webp"
+  - png: "/imgs/projects/airportlabs-communityapp/image2.png"
+    webp: "/imgs/projects/airportlabs-communityapp/image2.webp"
+  - png: "/imgs/projects/airportlabs-communityapp/image3.png"
+    webp: "/imgs/projects/airportlabs-communityapp/image3.webp"
+  - png: "/imgs/projects/airportlabs-communityapp/image4.png"
+    webp: "/imgs/projects/airportlabs-communityapp/image4.webp"
+  - png: "/imgs/projects/airportlabs-communityapp/image5.png"
+    webp: "/imgs/projects/airportlabs-communityapp/image5.webp"
+  - png: "/imgs/projects/airportlabs-communityapp/image6.png"
+    webp: "/imgs/projects/airportlabs-communityapp/image6.webp"
 yearsActive: [2022, "present"]
+techStack:
+  - PHP
+  - Laravel
+  - React
+  - Meteor
+myInvolvement: "Contributing to main development of the app, while primary contributing to the transition from multi-tenant to single-tenant architecture and integrating a plugins system."
 ---
+
+The Airport Community App (ACA) is the mobile hub for airport teams, designed to
+streamline communication and ensure operational continuity across the entire
+airport ecosystem, 24/7. Trusted by over 80 international airports and used by
+hundreds of thousands of airport professionals, the ACA centralizes critical
+real-time information that enables staff—from ground crew to management—to
+resolve issues fast and keep operations running smoothly. Key features include
+real-time flight timelines and turn updates, live passenger queue insights,
+private team chat channels for rapid coordination, and a quick fault reporting
+tool.
+
+Functioning as a mobile platform for operational intelligence, the ACA connects
+stakeholders from various companies and authorities within the airport community.
+It digitizes essential workflows, providing immediate access to a common
+operational picture, which is especially critical during disruptions like weather
+incidents or system failures. By providing unified data on flight statuses,
+asset location, and performance metrics directly in their pockets, the Airport
+Community App empowers users to make rapid, informed decisions, thereby enhancing
+collective operational efficiency and fostering a collaborative, data-sharing
+culture across the entire airport campus.
